--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "recharts": "^3.4.1",
+    "parse": "^8.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "parse": "5.0.0"
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
