--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,3 +9,10 @@ steps:
 
 images:
 - 'gcr.io/$PROJECT_ID/oss-manager-image'
+
+steps:
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/minha-imagem', '.']
+
+options:
+  logging: CLOUD_LOGGING_ONLY
