--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,25 +1,25 @@
 steps:
-# O nome aqui deve ser oss-manager-image
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/oss-manager-image', '.']
+  # 1. Build da imagem Docker
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/oss-manager-image', '.']
 
-# O nome aqui também deve ser oss-manager-image
+  # 2. Deploy para o Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args:
+      - 'run'
+      - 'deploy'
+      - 'oss-manager' # Verifique se este é o nome exato no seu console
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/oss-manager-image'
+      - '--region'
+      - 'us-central1' # Ajuste para a sua região (ex: southamerica-east1)
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'
+
 images:
-- 'gcr.io/$PROJECT_ID/oss-manager-image'
+  - 'gcr.io/$PROJECT_ID/oss-manager-image'
 
 options:
   logging: CLOUD_LOGGING_ONLY
-
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: gcloud
-  args:
-  - 'run'
-  - 'deploy'
-  - 'NOME-DO-SEU-SERVICO' # Troque pelo nome que aparece no Cloud Run
-  - '--image'
-  - 'gcr.io/$PROJECT_ID/oss-manager-image'
-  - '--region'
-  - 'us-central1' # Troque pela sua região (ex: southamerica-east1)
-  - '--platform'
-  - 'managed'
-  - '--allow-unauthenticated'
