--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-
   "dependencies": {
     "buffer": "^6.0.3",
     "events": "^3.3.0",
+    "express": "^5.2.1",
     "parse": "^5.0.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
